# predictive

./: .replit  __init__.py  bash_server.sh  implementation_plan.md  index.html  jsconfig.json  main.py  next.config.js  package-lock.json  package.json  pyproject.toml  replit.nix  response.txt  response_header.txt  run.sh  server.js  server.py  simple-server.js  simple_server.py  simplified_structure.md  start-app.sh  tailwind.config.js
.next/: trace
.next/cache/: config.json
.next/server/: _error.js  _ssr_src_lib_api_ts.js  app-paths-manifest.json  webpack-runtime.js
.streamlit/: config.toml
attached_assets/: Pasted--A-woman-in-a-red-suit-poses-with-her-hand-up-Zoe-Salda-a-in-Emilia-P-rez-Credit-Shanna-Besson--1740964879847.txt  Pasted--Award-Season-Tour-Award-Show-Hosted-By-When-It-Happens--1740930884935.txt  Pasted-The-ceremony-hosted-by-Conan-O-Brien-will-take-place-on-March-2-and-air-on-ABC-and-will-stream-on--1740960044659.txt
config/replit/: .replit  replit.nix
data_collection/: award_data.py  betting_scraper.py  mock_data.py  scraper.py
data_processing/: data_processor.py
database/: db_init.py  db_init_script.py  db_setup.py  operations.py
deprecated/data_collection/: betting_scraper.py  mock_data.py
deprecated/data_processing/: data_processor.py
models/: predictor.py
prisma/: schema.prisma  seed-direct.js  seed.ts
public/: README.txt  config-summary.html  index.html  nav.html
scripts/: start-app.sh
server/: __init__.py  api.py  constants.py  data.py  main.py  predictor.py
utils/: constants.py
visualization/: charts.py
(+115 files in other folders)
