[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
    "uvicorn>=0.34.0",
]
